@@ -1,26 +1,25 @@
 package com.merqury.agpu.timetable.memory;
 
-import com.merqury.agpu.timetable.DTO.GroupDay;
+import com.merqury.agpu.timetable.DTO.TeacherDay;
 import lombok.extern.log4j.Log4j2;
 import org.springframework.stereotype.Component;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
 
 @Component
 @Log4j2
-public class TimetableMemory {
-    private final List<GroupDay> memory;
+public class TeacherTimetableMemory {
+    private final List<TeacherDay> memory;
 
-    public TimetableMemory(){
+    public TeacherTimetableMemory(){
         memory = new ArrayList<>();
     }
 
-    public void addDiscipline(GroupDay groupDay){
-        log.info("added day: {}", groupDay);
-        memory.add(groupDay);
+    public void addDiscipline(TeacherDay day){
+        log.info("added day: {}", day);
+        memory.add(day);
         Thread cleaner = new Thread(() -> {
             log.info("task fo remove added");
             try {
@@ -28,27 +27,28 @@ public class TimetableMemory {
             } catch (InterruptedException e) {
                 throw new RuntimeException(e);
             }
-            log.info("object now removing {}", groupDay);
-            memory.remove(groupDay);
+            log.info("object now removing {}", day);
+            memory.remove(day);
         });
         cleaner.setDaemon(true);
         cleaner.start();
     }
 
-    public GroupDay getDisciplineByDate(String groupName, String date){
-        log.info("trying get discipline by date {} and by name {}\nDisciplines in memory:", date, groupName);
+    public TeacherDay getDisciplineByDate(String teacherName, String date){
+        log.info("trying get discipline by date {} and by name {}\nDisciplines in memory:", date, teacherName);
         memory.forEach(log::info);
 
         var res =  memory.stream()
-                .filter(groupGroupDay -> (groupGroupDay.getGroupName().equals(groupName) && groupGroupDay.getDate().equals(date)))
+                .filter(day -> (day.getTeacherName().equals(teacherName) && day.getDate().equals(date)))
                 .toList();
         if(!res.isEmpty())
             return res.get(0);
 
-        return GroupDay.builder()
+
+        return TeacherDay.builder()
                 .date(date)
-                .groupName(groupName)
-                .disciplines(Collections.emptyList())
+                .teacherName(teacherName)
+                .disciplines(List.of())
                 .build();
     }
 }
